--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           julia --project=docs -e '
             using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.add(url="https://github.com/notinaboat/PiGPIOC.jl")
             Pkg.instantiate()'
       - name: Build and deploy
         run: julia --project=docs docs/make.jl
