--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           julia --project=docs -e '
             using Pkg
-            Pkg.instantiate()
-            push!(LOAD_PATH, "..")'
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
       - name: Build and deploy
         run: julia --project=docs docs/make.jl
         env:
