--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           julia --project=docs -e '
             using Pkg
+            Pkg.add(path="https://github.com/notinaboat/PiGPIOC.jl")
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
       - name: Build and deploy
